add method curator can send request to event
